<resources>
    <string name="app_name">Kurdistan real estates</string>
    <string name="toggle_rent">Rent</string>
    <string name="toggle_sale">Sale</string>
    <string name="Area_menu">Area</string>
    <string name="Description">Description</string>
    <string name="SwedishRoom">Swedish Room</string>
    <string name="garage">Garage</string>
    <string name="VillaAge">VillaAge</string>
    <string name="bathroom">Bathroom</string>
    <string name="hall">Living Room</string>
    <string name="elevator">Elevator</string>
    <string name="floor">Floor</string>
    <string name="Room">Bedroom</string>
    <string name="Price">Price</string>
    <string name="HouseDirection">House Direction</string>
    <string name="VillaDirection">Villa Direction</string>
    <string name="StoreDirection">Store Direction</string>
    <string name="StorageDirection">Storage Direction</string>
    <string name="road">Road</string>
    <string name="pool">Pool</string>
    <string name="Garden">Garden</string>
    <string name="City">City</string>
    <string name="ApartAge">ApartAge</string>
    <string name="HouseAge">House Age</string>
    <string name="Adress">Address</string>
    <string name="price">Price</string>
    <string name="priceex">price eg:150000$</string>
    <string name="EarthDirection">Earth direction</string>
    <string name="Area">Area</string>
    <string name="Areaex">Area eg:250 m2</string>
    <string name="discription">Enter Description About Your House</string>
    <string name="Cityname">City Name</string>
    <string name="Citynameex">e.g:Avro City</string>


    <string-array name="garage_spin">
        <item>Any</item>
        <item>No garage</item>
        <item>1 Car</item>
        <item>2 Car</item>
        <item>3 Car</item>
        <item>Above 3 Car</item>
    </string-array>
    <string-array name="any_yes_no_spin">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="floor_spin">
        <item>Any</item>
        <item>1 floor</item>
        <item>2 floor</item>
        <item>3 floor</item>
        <item>4 floor</item>
        <item>5 floor</item>
        <item>6 floor</item>
        <item>7 floor</item>
        <item>8 floor</item>
        <item>9 floor</item>
        <item>10 floor</item>

    </string-array>
    <string-array name="Area_spin">
        <item>Anything</item>
        <item>below 100 m2</item>
        <item>100 m2 to 200 m2</item>
        <item>200 m2 to 300 m2</item>
        <item>400 m2 to 500 m2</item>
        <item>Above 500 m2</item>
    </string-array>
    <string-array name="Price_spin">
        <item>Any number</item>
        <item>below 50,000$</item>
        <item>50,000$ to 100,000$</item>
        <item>100,000$ to 150,000$</item>
        <item>150,000$ to 200,000$</item>
        <item>200,000$ to 250,000$</item>
        <item>250,000$ to 300,000$</item>
        <item>Above 300,000$</item>
    </string-array>
    <string-array name="HouseDirection_spin">
        <item>Any Direction</item>
        <item>North</item>
        <item>East</item>
        <item>South</item>
        <item>West</item>
    </string-array>
    <string-array name="rosd_spin">
        <item>Any road</item>
        <item>5m</item>
        <item>10m</item>
        <item>15m</item>
        <item>20m</item>
        <item>30m</item>
        <item>40m</item>
        <item>60m</item>
        <item>100m</item>
    </string-array>
    <string-array name="num1_10">
        <item>Any number</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="HouseAge_spin">
        <item>Any Age</item>
        <item>below 1 year</item>
        <item>below 2 year</item>
        <item>below 3 year</item>
        <item>below 4 year</item>
        <item>below 5 year</item>
        <item>below 10 year</item>
    </string-array>
    <string-array name="Garden_spin">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>


    </string-array>
    <string name="House">House</string>
    <string name="filterMenuTip">Filter</string>
    <string name="Apartment">Apartment</string>
    <string name="Vila">Villa</string>
    <string name="PartOfLand">Part of Land</string>
    <string name="Farm">Farm</string>
    <string name="Store">Store</string>
    <string name="Storage">Storage</string>
    <string name="Account">Account</string>
    <string name="addYourHouse">Add your House</string>
    <string name="Information">Information</string>
    <string name="ContactAs">Contact as</string>
    <string name="AboutAs">About</string>
    <string name="Feedback">Feedback</string>
    <string name="Filter">Filter</string>
    <string name="About_us">ئەم کومپانیا دهوك تێك یا کارێن تەکنولوجیا رابووینە ب دروستکرنا ئەپلیکشنێ (عقارات کوردستان) دبیت ئێکەم ئەپلیکەشن دەربارەی عەقارات ل سەرانسەری کوردستانێ و عێراقێ .مەرەم ژ دروستکرنا ڤێ ئەپلیکەشنێ ئەوە ئەگەر تە خانیەك یان ئاڤاهیەك یان شوقەك یان خانیەکێ گوزاری  بڤێت ب فروشی یان ژی ب کری یان کرێ کەی تو دشێ لڤێرە ریکلاما خوو بکەی ... بو وەرگرتنا پتر زانیاریا دەرباری ئەپلیکەشنێ پەیوەندی ب دهوك تێك بکە..</string>
    <string name="HowToCreateNewUser">ooooooo</string>
    <string name="How_to_add_a_new_ad">How to  advertise your home for sale</string>
    <string name="How_to_update_an_ad">ooooooooo</string>
    <string name="How_to_use_a_filter">oooooooooo</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic2FsYXJwcm8iLCJhIjoiY2ptaTF4M25tMDBlZDN3cThodGl6Mm54YyJ9.SSsJ2y-PX0cYweQJzXJ3Hw</string>
    <string name="Contact_owner">Contact owner</string>

</resources>
