<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivit.Add_Storage">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/toggleRent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_rent_sale"
                    android:checked="false"
                    android:textOff="@string/toggle_rent"
                    android:textOn="@string/toggle_rent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="1110dp" />

                <ToggleButton
                    android:id="@+id/toggleSale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_rent_sale"
                    android:checked="true"
                    android:text="ToggleButton"
                    android:textOff="@string/toggle_sale"
                    android:textOn="@string/toggle_sale"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="1110dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"
                android:orientation="horizontal">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|center_horizontal"
                    android:layout_weight="1.5"
                    android:text="@string/Adress"
                    android:textColor="#222"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editadress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Adress"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|center_horizontal"
                    android:layout_weight="1.5"
                    android:text="@string/Price"
                    android:textColor="#222"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical|center_horizontal"
                    android:layout_weight="1.5"
                    android:text="@string/Area_menu"
                    android:textColor="#222"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/editarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/Area"
                    android:inputType="textPersonName" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/storage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical|center_horizontal"
                    android:layout_weight="1.5"
                    android:text="@string/StoreDirection"
                    android:textColor="#222"
                    android:textSize="20dp" />

                <Spinner

                    android:id="@+id/spinstoredirction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:entries="@array/HouseDirection_spin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/road"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical|center_horizontal"
                    android:layout_weight="1.5"
                    android:text="@string/road"
                    android:textColor="#222"
                    android:textSize="20dp" />

                <Spinner

                    android:id="@+id/spinroad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:entries="@array/rosd_spin" />

            </LinearLayout>
            <EditText
                android:id="@+id/editdisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/discription"
                android:inputType="textPersonName" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999"
                android:orientation="horizontal">


            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>