<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMenu">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filterMenuTip"
                android:textAlignment="center"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/btAddMenuHouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/House"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/house" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btAddMenuApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/Apartment"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/apartment" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/btAddMenuVilla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/Vila"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/villa" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btAddMenuPartOfLand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/PartOfLand"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/land" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btAddMenuFarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/Farm"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/field" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btAddMenuStore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/Store"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/store" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btAddMenuStorage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/filter_menu_button"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingTop="9dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:text="@string/Storage"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorLight"
                    android:textSize="30dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/storage" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>